overlap bug fix, new logos

--- a/Styles/screen.css
+++ b/Styles/screen.css
@@ -71,7 +71,7 @@ p{
 
 figcaption{
     text-align: center;
-    position: relative;
+    /*position: relative;*/
     font-size: 1vw;
     color: #800000;
     font-style: italic;
@@ -373,14 +373,33 @@ box-shadow: 11px 11px 32px 2px rgba(94,91,91,1);
    transform: scale(1.1);
 }
 
+/*.comp_profiles {
+  display: inline-block;;
+}*/
+
 .github{
-    width: 250px;
+    width: 34%;
     height: auto;
-    margin: auto;
+    margin-left: 33%;
+    margin-right: 33%;
+    display: block;
 }
 
 .github:hover{
    transform: scale(1.1);
+}
+
+.medium{
+  width: 32%;
+  height: auto;
+  margin-top: 0;
+  margin-left: 34%;
+  margin-right: 34%;
+  display: block;
+}
+
+.medium:hover{
+  transform: scale(1.1);
 }
 
 
